<resources>
    <string name="app_name">家庭财务管理系统</string>
    <string name="app_name_debug">家庭财务管理系统（开发）</string>

    <!-- 公用文本 -->
    <string name="common_confirm">确定</string>
    <string name="common_cancel">取消</string>
    <string name="common_add">新增</string>

    <!-- 登录页 -->
    <string name="family_login">家庭登录</string>
    <string name="family_name_hint">请输入家庭名称</string>
    <string name="family_password_hint">请输入密码</string>
    <string name="remember_password">记住密码</string>
    <string name="login">登录</string>
    <string name="no_count_hint">没有账号？</string>
    <string name="register">去注册</string>
    <string name="login_hint">请先输入家庭名称、密码！</string>
    <string name="password_error">密码错误</string>
    <string name="no_find_user_hint">该用户不存在，请先注册！</string>
    <string name="login_success">登陆成功</string>

    <!-- 注册页 -->
    <string name="register_title">注册</string>
    <string name="family_name">家庭名称</string>
    <string name="pwd">密码</string>
    <string name="password_format_rem">密码必须包含大写、小写字母和数字，8~16位</string>
    <string name="register_hint">请先输入家庭名称、密码！</string>
    <string name="user_already_exists">该用户已存在</string>
    <string name="default_loading_msg">正在加载</string>
    <string name="register_success">注册成功</string>

    <!-- 菜单 -->
    <string name="home">首页</string>
    <string name="data_statistics">数据统计</string>
    <string name="income_expenditure">收入/支出</string>
    <string name="mine">我的</string>

    <!-- 我的 -->
    <string name="logout">退出登录</string>
    <string name="old_pwd_hint">请输入旧密码</string>
    <string name="new_pwd_hint">请输入新密码</string>
    <string name="modify">修改</string>
    <string name="modify_success">修改成功</string>
    <string name="old_pwd_error">旧密码与登录密码不一致</string>
    <string name="logout_reminder">您确认要退出帐号吗？</string>
    <string name="basic_function">基本功能</string>
    <string name="modify_pwd">修改密码</string>
    <string name="sys_config">系统配置</string>
    <string name="count_type">账户类型</string>
    <string name="consumption_type">消费类型</string>
    <string name="income_type">收入类型</string>
    <string name="family_member">家庭成员</string>
    <string name="banner">轮播图配置</string>
    <string name="add">+ 添加</string>
    <string name="system_config_common_type_hint">请输入类型</string>
    <string name="input_hint">请输入</string>
    <string name="no_data">暂无数据</string>
    <string name="add_success">添加成功</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_reminder">确认删除?</string>

    <!-- 收入/支出 -->
    <string name="income">收入</string>
    <string name="expenditure">支出</string>
    <string name="type">类型</string>
    <string name="type_hint">请选择类型</string>
    <string name="expenditure_type_hint">请选择消费类型</string>
    <string name="income_type_hint">请选择收入类型</string>
    <string name="amount">金额</string>
    <string name="amount_hint">请输入金额</string>
    <string name="date">日期</string>
    <string name="date_hint">请选择日期</string>
    <string name="select_hint">请选择</string>
    <string name="add_hint">请完善所有信息</string>
    <string name="monthly">月度</string>
    <string name="annual">年度</string>
    <string name="day">日</string>
    <string name="month">月</string>
    <string name="year">年</string>
    <string name="income_analyse">收入分析</string>
    <string name="expenditure_analyse">支出分析</string>
    <string name="income_trend">收入趋势</string>
    <string name="expenditure_trend">支出趋势</string>
    <string name="income_rank">收入排行</string>
    <string name="expenditure_rank">支出排行</string>
    <string name="income_percentage">收入占比</string>
    <string name="expenditure_percentage">支出占比</string>
    <string name="rmb">元</string>

    <!-- 首页 -->
    <string name="budget_monthly">本月预算</string>
    <string name="remaining_budget">剩余预算：</string>
    <string name="budget">总预算：</string>
    <string name="budget_setting">预算设置</string>
    <string name="todo">待办事项</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="late">已逾期</string>
    <string name="add_todo">新增待办事项</string>
    <string name="todo_title">事项名称</string>
    <string name="todo_title_hint">请输入事项名称</string>
    <string name="todo_content_title">事项内容</string>
    <string name="todo_content_title_hint">请输入事项内容</string>
    <string name="confirm_todo_rem">确认完成事项？</string>
</resources>